Mon May  9 02:51:51 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (rb_gc_unprotect_logging): throw rb_memerror when it cannot
	  allocate memory. This is pointed out by Facebook's Infer.

	* gc.c (gc_prof_setup_new_record): ditto.

	* regparse.c (parse_regexp): ditto.

	* util.c (MALLOC): use xmalloc and xfree like above.

Mon May  9 02:39:16 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: check function attirbute const and pure,
	  and define CONSTFUNC and PUREFUNC if available.
	  Note that I don't add those options as default because
	  it still shows many false-positive (it seems not to consider
	  longjmp).

	* vm_eval.c (stack_check): get rb_thread_t* as an argument
	  to avoid duplicate call of GET_THREAD().

Sun May  8 21:01:14 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/extconf.rb: assume it doesn't have SSLv2 related
	  functions when OPENSSL_NO_SSL2 is defined.
	  Usually openssl's header and the library (libssl) have the same
	  set of functions, but on some environment the library has functions
	  whose headers doesn't declare. (openssl/opensslconf.h and libssl.so
	  aren't be synchronized)
	  To detect such case explicitly check feature macro and remove
	  related functions.

Sun May  8 18:51:33 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_home_dir_of): return the default home path if the
	  user name is the current user name, on platforms where struct
	  pwd is not supported.  a temporary measure against
	  [Bug #12226].

Sun May  8 08:51:38 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: add -Wsuggest-attribute=format and suppress warnings.

Sun May  8 08:31:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: add -Wsuggest-attribute=noreturn and suppress warnings.

Sun May  8 08:19:16 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: add -Werror=implicit-int to avoid missing type of
	  function declaration.

Sat May  7 22:22:37 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
