@@ -1,3 +1,8 @@
+Mon May  9 06:30:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* include/ruby/ruby.h (CONSTFUNC, PUREFUNC): fixed build errors on
+	  non-gcc build environments introduced at r54952.
+
 Mon May  9 02:51:51 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* gc.c (rb_gc_unprotect_logging): throw rb_memerror when it cannot
